# owl

./: LICENSE  README.md  pyproject.toml
owl/: __main__.py  audio_scale.py  converter.py  curves.py  events.py  frequency_curve.py  logging.py  output_stream.py  soundgen.py  synthesizer.py  types.py
owl/converters/: __init__.py  base.py  converter.py  focus.py  utils.py
owl/converters/dynamic/: __init__.py  base.py  scan.py
owl/converters/static/: __init__.py  base.py  curve.py  shifters.py  spread.py
owl/gui/: __main__.py  models.py  options_widgets.py  view_models.py  widgets.py
owl/scripts/: camera_test.py  owl.py
