[tool.poetry]
name = "owl-framework"
version = "0.1.1"
description = "Extensible framework for comparing methods of converting video to audio"
license = "MIT"
authors = ["Jakub Rozek <jakub.rozek314@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Kuba314/owl"
keywords = ["conversion", "blindness", "visual-aid", "video-to-audio"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]
packages = [
    { include = "owl" },
]

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.7.0.68"
numpy = "^1.26.0"
hilbertcurve = "^2.0.5"
pyaudio = "^0.2.13"
arcparse = "^0.6.0"

[tool.poetry.scripts]
owl = "owl.scripts.owl:main"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
types-pyaudio = "^0.2.16.5"
pyright = "^1.1.343"
ruff = "^0.1.9"
isort = "^5.13.2"

[[tool.mypy.overrides]]
module = ["cv2.*", "hilbertcurve.*", "numpy"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
from_first = "true"
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
